<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:key="developer_log_category"
        android:title="@string/developer_log_category_title">

        <SwitchPreference
            android:key="app_log_enable"
            android:title="@string/developer_app_log_enable_title"
            android:summary="@string/developer_app_log_enable_summary_off"
            app:icon="@drawable/ic_app_setting" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="developer_subtitle_category"
        android:title="@string/developer_subtitle_debug_category_title">

        <SwitchPreference
            android:key="subtitle_telemetry_log_enable"
            android:title="@string/developer_subtitle_telemetry_log_enable_title"
            android:summary="@string/developer_subtitle_telemetry_log_enable_summary_off"
            app:icon="@drawable/ic_app_setting" />

        <Preference
            android:key="subtitle_session_status"
            android:title="@string/developer_subtitle_session_status_title"
            android:summary="@string/developer_subtitle_session_status_summary_empty"
            app:icon="@drawable/ic_app_setting_about_us" />

        <Preference
            android:key="subtitle_force_fallback"
            android:title="@string/developer_subtitle_force_fallback_title"
            android:summary="@string/developer_subtitle_force_fallback_summary"
            app:icon="@drawable/ic_feedback" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="developer_bugly_category"
        android:title="@string/developer_bugly_category_title">

        <Preference
            android:key="bugly_status"
            android:title="@string/developer_bugly_status_title"
            android:summary="@string/developer_bugly_status_summary"
            app:icon="@drawable/ic_app_setting_about_us" />
    </PreferenceCategory>

</PreferenceScreen>
